examples/test/testpolicy6178.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6178
  namespace: namespace336
spec:
  podSelector:
    matchLabels:
      key3: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value44
          key31: value4
      podSelector:
        matchLabels:
          key43: value17
          key21: value30
